nativeclient_issues/2334/issue
<ns0:entry xmlns:ns0="http://www.w3.org/2005/Atom" xmlns:ns1="http://schemas.google.com/g/2005" xmlns:ns2="http://schemas.google.com/projecthosting/issues/2009" ns1:etag="W/&quot;DEICSH47eCl7ImA9WhdbFUg.&quot;">
		<ns0:id>http://code.google.com/feeds/issues/p/nativeclient/issues/full/2334</ns0:id><ns0:author>
			<ns0:name>krasin@google.com</ns0:name><ns0:uri>/u/krasin@google.com/</ns0:uri></ns0:author><ns0:content type="html">&lt;b&gt;What version of the SDK are you using?&lt;/b&gt;
&lt;b&gt;What version of the runtime are you using?&lt;/b&gt;
&lt;b&gt;On what operating system?&lt;/b&gt;
&lt;b&gt;What browser are you using?&lt;/b&gt;
&lt;b&gt;Please include version information for both the OS and the browser.&lt;/b&gt;

&lt;b&gt;What steps will reproduce the problem?&lt;/b&gt;
1. Checkout the latest native client sources
2. tools/llvm/utman.sh all
3. tools/llvm/utman.sh sdk
4. ./scons platform=x86-64 pnacl_use_clang=1 bitcode=1 toolchain_tests -j16

&lt;b&gt;What is the expected output? What do you see instead?&lt;/b&gt;

Expected: all tests pass
I see the following compile errors:
...
tests/toolchain/llvm_math_intrinsics.c:36:36: error: extension used [-Werror,-pedantic]
double llvm_intrinsic_sqrt(double) asm(&amp;quot;llvm.sqrt.f64&amp;quot;);
                                   ^
tests/toolchain/llvm_math_intrinsics.c:37:35: error: extension used [-Werror,-pedantic]
float llvm_intrinsic_sqrtf(float) asm(&amp;quot;llvm.sqrt.f32&amp;quot;);
                                  ^
tests/toolchain/llvm_math_intrinsics.c:39:35: error: extension used [-Werror,-pedantic]
double llvm_intrinsic_log(double) asm(&amp;quot;llvm.log.f64&amp;quot;);
...


&lt;b&gt;Please provide any additional information below and attach any relevant&lt;/b&gt;
&lt;b&gt;source files.&lt;/b&gt;

I'm not sure why these tests pass before. -pedantic in Clangcomplains on language extensions.

The following simple test program fails:

double lala(double) asm(&amp;quot;llvm.log.f64&amp;quot;);

if you compile it with:
clang  -c -emit-llvm lala.c -pedantic

Note: it's the usual clang that targets to the host system (x86_64-unknown-linux-gnu in my case). So, it's no nacl-related issue.</ns0:content><ns0:updated>2011-10-14T01:42:49.000Z</ns0:updated><ns0:published>2011-10-04T00:07:06.000Z</ns0:published><ns2:status>Fixed</ns2:status><ns2:cc>
			<ns2:uri>/u/robertm@google.com/</ns2:uri><ns2:username>robertm@google.com</ns2:username></ns2:cc><ns2:cc>
			<ns2:uri>/u/104735739662288482898/</ns2:uri><ns2:username>pdox%goo...@gtempaccount.com</ns2:username></ns2:cc><ns2:state>closed</ns2:state><ns0:title>toolchain_tests are broken for Clang</ns0:title><ns2:label>Type-Defect</ns2:label><ns2:label>Pri-1</ns2:label><ns2:label>Component-PNaCl</ns2:label><ns2:label>OS-All</ns2:label><ns0:link href="http://code.google.com/feeds/issues/p/nativeclient/issues/2334/comments/full" rel="replies" type="application/atom+xml" /><ns0:link href="http://code.google.com/p/nativeclient/issues/detail?id=2334" rel="alternate" type="text/html" /><ns0:link href="https://code.google.com/feeds/issues/p/nativeclient/issues/full/2334" rel="self" type="application/atom+xml" /><ns2:stars>1</ns2:stars><ns2:closedDate>2011-10-14T01:42:49.000Z</ns2:closedDate><ns2:id>2334</ns2:id></ns0:entry>